--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h1 {
 .tic-tac-toe {
     justify-content: center;
     display: flex;
+
     flex-wrap: wrap;
     width: 520px;
     height: 520px;
@@ -51,6 +52,7 @@ h1 {
   }
 
   .tic-tac-toe div {
+
     min-width: 171px;
     min-height: 171px;
     display: flex;
@@ -67,8 +69,30 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 .selected {
   pointer-events: none;
 
+}
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#message {
+  color: white;
+  font-size: 36px;
+  text-align: center;
+}
+button {
+  font-size: 40px;
+  margin: 20px;
 }
